--- a/superhero_project/superheroes/templates/superheroes/detail.html
+++ b/superhero_project/superheroes/templates/superheroes/detail.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <h1>{{single_hero}}</h1>
+    <h1>{{single_hero.name}}</h1>
+    <h2>Alter Ego: {{single_hero.alter_ego}}</h2>
+    <h2>Primary Aability: {{single_hero.primary_ability}}</h2>
+    <h2>Secondary Ability: {{single_hero.secondary_ability}}</h2>
+    <h2>Catch Phrase: {{single_hero.catch_phrase}}</h2>
 
 </body>
 
