added delete method which is selected inside detail page of single hero. When selected hero is removed from the database and user returns to index

--- a/superhero_project/superheroes/templates/superheroes/detail.html
+++ b/superhero_project/superheroes/templates/superheroes/detail.html
@@ -15,6 +15,7 @@
     <h2>Secondary Ability: {{single_hero.secondary_ability}}</h2>
     <h2>Catch Phrase: {{single_hero.catch_phrase}}</h2>
 
+    <a href="{% url 'superheroes:delete' single_hero.id %}">Delete Hero</a>
 </body>
 
 </html>
