--- a/superhero_project/superheroes/templates/superheroes/edit.html
+++ b/superhero_project/superheroes/templates/superheroes/edit.html
@@ -11,11 +11,12 @@
 <body>
     <form action="{% url 'superheroes:edit' single_hero.id %}" method="post">
         {% csrf_token %}
-        Name: <input type="text" name="name" id="name"><br />
-        Alter Ego: <input type="text" name="alter_ego" id="alter_ego"><br />
-        Primary Ability: <input type="text" name="primary" id="primary"><br />
-        Secondary Ability: <input type="text" name="secondary" id="secondary"><br />
-        Catchphrase: <input type="text" name="catchphrase" id="catchphrase"><br />
+        Name: <input type="text" name="name" id="name" value="{{single_hero.name}}"><br />
+        Alter Ego: <input type="text" name="alter_ego" id="alter_ego" value="{{single_hero.alter_ego}}"><br />
+        Primary Ability: <input type="text" name="primary" id="primary" value="{{single_hero.primary_ability}}"><br />
+        Secondary Ability: <input type="text" name="secondary" id="secondary"
+            value="{{single_hero.secondary_ability}}"><br />
+        Catchphrase: <input type="text" name="catchphrase" id="catchphrase" value="{{single_hero.catch_phrase}}"><br />
         <input type="submit" value='Update'>
     </form>
 </body>
